--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "nanoid": "^5.1.6",
+    "party-js": "^2.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
